Fixed h1 whitespace inside articles

--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -151,6 +151,10 @@ article {
         text-align: justify;
     }
 
+    h1 {
+        margin-top: var(--space-xl);
+    }
+
     ul,
     ol {
         padding-left: 1.5em;
